--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,24 +2,32 @@
 #
 # Table name: users
 #
-#  id              :integer          not null, primary key
-#  email           :string(255)
-#  fname           :string(255)
-#  lname           :string(255)
-#  password_digest :string(255)
-#  address1        :string(255)
-#  address2        :string(255)
-#  city            :string(255)
-#  state           :string(2)
-#  remember_token  :string(255)
-#  zip             :string(255)
-#  phone           :string(255)
-#  country         :string(255)
-#  is_rep          :boolean
-#  is_admin        :boolean
-#  is_active       :boolean
-#  created_at      :datetime
-#  updated_at      :datetime
+#  id               :integer          not null, primary key
+#  email            :string(255)
+#  fname            :string(255)
+#  lname            :string(255)
+#  password_digest  :string(255)
+#  address1         :string(255)
+#  address2         :string(255)
+#  city             :string(255)
+#  state            :string(2)
+#  remember_token   :string(255)
+#  zip              :string(255)
+#  phone            :string(255)
+#  country          :string(255)
+#  is_rep           :boolean
+#  is_admin         :boolean
+#  is_active        :boolean
+#  created_at       :datetime
+#  updated_at       :datetime
+#  net_id           :string(255)
+#  gender           :string(1)
+#  school           :string(255)
+#  major            :string(255)
+#  grad_year        :string(4)
+#  dob              :date
+#  is_international :boolean
+#  should_spam      :boolean
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
