Add, edit, remove items (bug fixes)

--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -13,6 +13,7 @@
 #  updated_at  :datetime
 #  box_id      :integer
 #  is_deleted  :boolean
+#  quantity    :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
