--- a/public/brss.plist
+++ b/public/brss.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>brss.herokuapp.com/brss.ipa</string>
+					<string>https://brss.herokuapp.com/brss.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
