--- a/public/brss.plist
+++ b/public/brss.plist
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>BRSS</string>
+				<string>brss</string>
 			</dict>
 		</dict>
 	</array>
