--- a/public/brss.plist
+++ b/public/brss.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://brss.herokuapp.com/brss.ipa</string>
+					<string>https://brss.herokuapp.com/brss2.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>brss</string>
+				<string>BRSS</string>
 			</dict>
 		</dict>
 	</array>
