--- a/test/fixtures/appointments.yml
+++ b/test/fixtures/appointments.yml
@@ -31,6 +31,7 @@
 #  percent_discount    :integer
 #  fuel_surcharge      :integer
 #  packaging_hours     :integer
+#  rep_name            :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
