--- a/test/fixtures/provisions.yml
+++ b/test/fixtures/provisions.yml
@@ -9,6 +9,7 @@
 #  is_deleted  :boolean
 #  created_at  :datetime
 #  updated_at  :datetime
+#  rep_name    :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
